account service added
account service logic added and testes.
pg sql changes
docker fix
password hash

--- a/Lab_2_Stateful_service_for_RDBMS/account_service/Dockerfile
+++ b/Lab_2_Stateful_service_for_RDBMS/account_service/Dockerfile
@@ -1,14 +1,16 @@
 FROM golang:latest
 
-RUN mkdir /u_app
-WORKDIR /u_app
+RUN mkdir /a_app
+WORKDIR /a_app
 
 COPY go.mod ./
 COPY go.sum ./
 RUN go mod download
 
-COPY . /u_app
-WORKDIR /u_app/cmd/app
+COPY . /a_app
+WORKDIR /a_app/cmd/app
 RUN go build -o main
+
+EXPOSE 8087
 
 CMD ["./main"]
