--- a/Lab_2_Stateful_service_for_RDBMS/docker-compose.yml
+++ b/Lab_2_Stateful_service_for_RDBMS/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       - 8080:8080
     environment:
         USER_SERVICE_PORT: 8080
-        ACCOUNT_SERVICE_PORT: 'http://account_service:8087'
-        MSG_SERVICE_PORT: 8088
-        POST_SERVICE_PORT: 8089
+        ACCOUNT_SERVICE_URL: 'http://account_service:8087'
+        MSG_SERVICE_URL: 'http://message_service:8088'
+        POST_SERVICE_URL: 'http://post_service:8089'
     networks:
       - sn-network
       
@@ -32,7 +32,43 @@ services:
       - "8087"
     networks:
       - sn-network
-
+      
+  message_service:
+    container_name: message_service
+    build:
+      context: ./message_service
+    environment:
+        MSG_SERVICE_PORT: 8088
+        DB_HOST: 'postgres'
+        DB_PORT: 5432
+        DB_USER: 'admin'
+        DB_PASSWORD: 'admin'
+        DB_NAME: 'sndb'
+        DB_SCHEMA: 'social_network'
+        DB_MESSAGE_TABLE_NAME: 'message'
+    expose:
+      - "8088"
+    networks:
+      - sn-network
+      
+  post_service:
+    container_name: post_service
+    build:
+      context: ./post_service
+    environment:
+        POST_SERVICE_PORT: 8089
+        DB_HOST: 'postgres'
+        DB_PORT: 5432
+        DB_USER: 'admin'
+        DB_PASSWORD: 'admin'
+        DB_NAME: 'sndb'
+        DB_SCHEMA: 'social_network'
+        DB_POST_TABLE_NAME: 'post'
+    expose:
+      - "8089"
+    networks:
+      - sn-network
+      
   postgres:
     image: postgres:15
     environment:
