--- a/Lab_3_Stateful_service_for_NoSql/docker-compose.yml
+++ b/Lab_3_Stateful_service_for_NoSql/docker-compose.yml
@@ -1,6 +1,39 @@
 version: '3.7'
 
 services:
+  mongo1:
+    image: mongo:5.0
+    hostname: mongo1
+    container_name: mongo1
+    ports:
+      - 27017:27017
+    entrypoint: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo1"]
+  mongo2:
+    image: mongo:5.0
+    hostname: mongo2
+    container_name: mongo2
+    ports:
+      - 27018:27017
+    entrypoint: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo2"]
+  mongo3:
+    image: mongo:5.0
+    hostname: mongo3
+    container_name: mongo3
+    ports:
+      - 27019:27017
+    entrypoint: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo3"]
+    
+  mongosetup:
+    image: mongo:5.0
+    depends_on:
+      - mongo1
+      - mongo2
+      - mongo3
+    volumes:
+      - .:/scripts
+    restart: "no"
+    entrypoint: [ "bash", "/scripts/mongo_setup.sh"]
+
   user_service:
     container_name: user_service
     build:
@@ -24,20 +57,11 @@ services:
       context: ./account_service
     environment:
         ACCOUNT_SERVICE_PORT: 8087
-        DB_HOST: 'postgres'
-        DB_PORT: 5432
-        DB_USER: 'admin'
-        DB_PASSWORD: 'admin'
-        DB_NAME: 'sndb'
-        DB_SCHEMA: 'social_network'
-        DB_ACCOUNT_TABLE_NAME: 'account'
     expose:
       - "8087"
     depends_on:
       user_service:
         condition: service_started
-      postgres:
-        condition: service_healthy
     networks:
       - sn-network
       
@@ -47,20 +71,11 @@ services:
       context: ./message_service
     environment:
         MSG_SERVICE_PORT: 8088
-        DB_HOST: 'postgres'
-        DB_PORT: 5432
-        DB_USER: 'admin'
-        DB_PASSWORD: 'admin'
-        DB_NAME: 'sndb'
-        DB_SCHEMA: 'social_network'
-        DB_MESSAGE_TABLE_NAME: 'message'
     expose:
       - "8088"
     depends_on:
       user_service:
         condition: service_started
-      postgres:
-        condition: service_healthy
     networks:
       - sn-network
       
@@ -70,73 +85,18 @@ services:
       context: ./post_service
     environment:
         POST_SERVICE_PORT: 8089
-        DB_HOST: 'postgres'
-        DB_PORT: 5432
-        DB_USER: 'admin'
-        DB_PASSWORD: 'admin'
-        DB_NAME: 'sndb'
-        DB_SCHEMA: 'social_network'
-        DB_POST_TABLE_NAME: 'post'
     depends_on:
       user_service:
         condition: service_started
-      postgres:
-        condition: service_healthy
     expose:
       - "8089"
     networks:
       - sn-network
       
-  postgres:
-    image: postgres:15
-    environment:
-        POSTGRES_USER: admin
-        POSTGRES_PASSWORD: admin
-        POSTGRES_DB: sndb
-        PGDATA: '/data/postgres'
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-      - ./scripts/user_db_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -d postgres" ]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-    networks:
-      - sn-network
-
- # data_loader_http:
- #   container_name: data_loader_http
- #   build:
- #     context: ./data_loader_http
- #   environment:
- #       HOST: 'user_service'
- #       PORT: '8080'
- #       ROUTE_ACCOUNT: '/account'
- #       ROUTE_MESSAGES: '/messages'
- #       ROUTE_POSTS: '/posts'
- #   depends_on:
- #     postgres:
- #       condition: service_healthy
- #   networks:
- #     - sn-network
-
-  insert_maker:
-    container_name: insert_maker
-    build:
-      context: ./insert_maker
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - sn-network
 
 networks:
   sn-network:
     driver: "bridge"
 
 volumes:
-  pgdata:
+  mongodata:
