--- a/Lab_3_Stateful_service_for_NoSql/docker-compose.yml
+++ b/Lab_3_Stateful_service_for_NoSql/docker-compose.yml
@@ -1,38 +1,6 @@
 version: '3.7'
 
 services:
-  mongo1:
-    image: mongo:5.0
-    hostname: mongo1
-    container_name: mongo1
-    ports:
-      - 27017:27017
-    entrypoint: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo1"]
-  mongo2:
-    image: mongo:5.0
-    hostname: mongo2
-    container_name: mongo2
-    ports:
-      - 27018:27017
-    entrypoint: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo2"]
-  mongo3:
-    image: mongo:5.0
-    hostname: mongo3
-    container_name: mongo3
-    ports:
-      - 27019:27017
-    entrypoint: ["mongod", "--replSet", "myReplicaSet", "--bind_ip", "localhost,mongo3"]
-    
-  mongosetup:
-    image: mongo:5.0
-    depends_on:
-      - mongo1
-      - mongo2
-      - mongo3
-    volumes:
-      - .:/scripts
-    restart: "no"
-    entrypoint: [ "bash", "/scripts/mongo_setup.sh"]
 
   user_service:
     container_name: user_service
@@ -46,17 +14,26 @@ services:
         MSG_SERVICE_URL: 'http://message_service:8088'
         POST_SERVICE_URL: 'http://post_service:8089'
     depends_on:
-      postgres:
+      #postgres:
+      #  condition: service_healthy
+      mongohealth:
         condition: service_healthy
     networks:
       - sn-network
-      
+
   account_service:
     container_name: account_service
     build:
       context: ./account_service
     environment:
         ACCOUNT_SERVICE_PORT: 8087
+        DB_HOST: 'postgres'
+        DB_PORT: 5432
+        DB_USER: 'admin'
+        DB_PASSWORD: 'admin'
+        DB_NAME: 'sndb'
+        DB_SCHEMA: 'social_network'
+        DB_ACCOUNT_TABLE_NAME: 'account'
     expose:
       - "8087"
     depends_on:
@@ -64,18 +41,27 @@ services:
         condition: service_started
     networks:
       - sn-network
-      
+
   message_service:
     container_name: message_service
     build:
       context: ./message_service
     environment:
         MSG_SERVICE_PORT: 8088
+        MONGO_HOST: mongo1
+        MONGO_PORT: 27017
+        MONGO_USERNAME: msgpostservice
+        MONGO_PASSWORD: msgpostservice
+        MONGO_DB: sndb
+        MONGO_COLLECTION: messages
     expose:
       - "8088"
     depends_on:
-      user_service:
-        condition: service_started
+      mongohealth:
+        condition: service_healthy
+   # depends_on:
+   #   user_service:
+   #     condition: service_started
     networks:
       - sn-network
       
@@ -84,7 +70,13 @@ services:
     build:
       context: ./post_service
     environment:
-        POST_SERVICE_PORT: 8089
+      POST_SERVICE_PORT: 8089
+      MONGO_HOST: mongo1
+      MONGO_PORT: 27017
+      MONGO_USERNAME: msgpostservice
+      MONGO_PASSWORD: msgpostservice
+      MONGO_DB: sndb
+      MONGO_COLLECTION: posts
     depends_on:
       user_service:
         condition: service_started
@@ -92,11 +84,88 @@ services:
       - "8089"
     networks:
       - sn-network
+
+  mongo1:
+    image: mongo:5.0
+    hostname: mongo1
+    container_name: mongo1
+    expose:
+      - 27017
+    ports:
+      - 27017:27017
+    entrypoint: ["mongod", "--replSet", "rs0", "--bind_ip", "localhost,mongo1"]
+    networks:
+      - sn-network
+  mongo2:
+    image: mongo:5.0
+    hostname: mongo2
+    container_name: mongo2
+    expose:
+      - 27017
+    ports:
+      - 27018:27017
+    entrypoint: ["mongod", "--replSet", "rs0", "--bind_ip", "localhost,mongo2"]
+    networks:
+      - sn-network
+  mongo3:
+    image: mongo:5.0
+    hostname: mongo3
+    container_name: mongo3
+    expose:
+      - 27017
+    ports:
+      - 27019:27017
+    entrypoint: ["mongod", "--replSet", "rs0", "--bind_ip", "localhost,mongo3"]
+    networks:
+      - sn-network
+    
+
+  mongo-setup:
+    container_name: mongo-setup
+    image: mongo:5.0
+    restart: on-failure
+    volumes:
+      - ./scripts:/scripts
+    entrypoint: [ "/scripts/mongo_setup.sh" ]
+    depends_on:
+      - mongo1
+      - mongo2
+      - mongo3
+    networks:
+      - sn-network
+
+  mongohealth:
+    image: mongo:5.0
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+    networks:
+      - sn-network
       
+  postgres:
+    image: postgres:15
+    environment:
+        POSTGRES_USER: admin
+        POSTGRES_PASSWORD: admin
+        POSTGRES_DB: sndb
+        PGDATA: '/data/postgres'
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./scripts/user_db_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d postgres" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - sn-network
 
 networks:
   sn-network:
     driver: "bridge"
 
 volumes:
+  pgdata:
   mongodata:
