--- a/Lab_2_Stateful_service_for_RDBMS/docker-compose.yml
+++ b/Lab_2_Stateful_service_for_RDBMS/docker-compose.yml
@@ -108,31 +108,31 @@ services:
     networks:
       - sn-network
 
- # data_loader_http:
- #   container_name: data_loader_http
- #   build:
- #     context: ./data_loader_http
- #   environment:
- #       HOST: 'user_service'
- #       PORT: '8080'
- #       ROUTE_ACCOUNT: '/account'
- #       ROUTE_MESSAGES: '/messages'
- #       ROUTE_POSTS: '/posts'
- #   depends_on:
- #     postgres:
- #       condition: service_healthy
- #   networks:
- #     - sn-network
+  data_loader_http:
+   container_name: data_loader_http
+   build:
+     context: ./data_loader_http
+   environment:
+       HOST: 'user_service'
+       PORT: '8080'
+       ROUTE_ACCOUNT: '/account'
+       ROUTE_MESSAGES: '/messages'
+       ROUTE_POSTS: '/posts'
+   depends_on:
+     postgres:
+       condition: service_healthy
+   networks:
+     - sn-network
 
-  insert_maker:
-    container_name: insert_maker
-    build:
-      context: ./insert_maker
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - sn-network
+  #insert_maker:
+  #  container_name: insert_maker
+  #  build:
+  #    context: ./insert_maker
+  #  depends_on:
+  #    postgres:
+  #      condition: service_healthy
+  #  networks:
+  #    - sn-network
 
 networks:
   sn-network:
