--- a/Lab_3_Stateful_service_for_NoSql/docker-compose.yml
+++ b/Lab_3_Stateful_service_for_NoSql/docker-compose.yml
@@ -120,21 +120,6 @@ services:
     networks:
       - sn-network
     
-  mongo-setup:
-    container_name: mongo-setup
-    image: mongo:5.0
-    restart: on-failure
-    volumes:
-      - ./scripts:/scripts
-    entrypoint: [ "/scripts/mongo_setup.sh" ]
-    depends_on:
-      - mongo1
-      - mongo2
-      - mongo3
-      - mongohealth
-    networks:
-      - sn-network
-
   mongohealth:
     image: mongo:5.0
     healthcheck:
@@ -142,6 +127,21 @@ services:
     networks:
       - sn-network
       
+  mongo-setup:
+    container_name: mongo-setup
+    image: mongo:5.0
+    restart: on-failure
+    volumes:
+      - ./scripts:/scripts
+    depends_on:
+      - mongo1
+      - mongo2
+      - mongo3
+      - mongohealth
+    entrypoint: [ "bash", "/scripts/mongo_setup.sh"]
+    networks:
+      - sn-network
+
   postgres:
     image: postgres:15
     environment:
